2015-09-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dcm.c (dicom_info): Try to make dicom_info array more
	'const'.

	* coders/dpx.c: Eliminate use of static buffer strings.

	* coders/png.c: Make MNG chunk id strings constant rather than
	initialized data.

	* magick/render.c (DrawAffineImage): Fix problem that sometimes
	output rows are skipped when using OpenMP.  Problem identification
	and patch by Kevin Matzen.  Resolves SourceForge issue #316
	"-affine sometimes produces output with missing rows".

2015-08-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/rwblob.tap: Add specific tests for BMP2 BMP3 subformats.

	* tests/rwfile.tap: Add specific tests for BMP2 BMP3 PS2 PS3
	subformats.

2015-08-30  Jaroslav Fojtik  <JaFojtik@seznam.cz>

        * magick/ImageMagick.rc Replace Imagemagick.ico by GraphicsMagick.ico

        * magick/Imagemagick.ico is no longer needed and not referenced anywhere.

2015-08-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* README.txt: Fix SourceForge bug 314 "README: bad hg clone URL".

	* magick/module.c (GetModuleListForDirectory): Fix Coverity 107017
	"Copy into fixed size buffer" and 107013 "Overlapping buffer in
	memory copy".
	(UnloadModule): Fix SourceForge bug 312 "uninitialized variable
	"name" in UnloadModule".

	* coders/bmp.c (WriteBMPImage): Fix typo in fix on 2015-08-17.
	Fixes Coverity 107014 "Test should be assignment".

	* magick/module.c (OpenModules): Fix Coverity 107016 "Resource
	leak".
	(GetModuleListForDirectory): Fix Coverity 107015 "Resource leak".

2015-08-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (WriteBMPImage): Fix inverted alpha channel when
	writing BGRA8888 format.  Problem was reported by 张铎 via the
	graphicsmagick-help discussion list on 2015-08-17.

2015-08-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c (GenerateEXIFAttribute): Verify that entry